# sampler

./: .gitignore  README.md
audio-wav-lib/: .gitignore  CMakeLists.txt
audio-wav-lib/audio-wav/: CMakeLists.txt
audio-wav-lib/audio-wav-benchmark/: CMakeLists.txt
audio-wav-lib/audio-wav-test/: CMakeLists.txt
audio-wav-lib/audio-wav-test/src/: WavTest.cpp
audio-wav-lib/audio-wav/src/: WavGenerator.cpp
audio-wav-lib/include/audio-wav/: WavGenerator.h
audio-wav-lib/script/: build_all_android.sh  clean.sh  config.sh
sampler-android/: build.gradle
sampler-android/app/: CMakeLists.txt  build.gradle
sampler-android/app/src/main/: AndroidManifest.xml
sampler-android/app/src/main/assets/wav/shape-of-you/: presets_config_v7.json
sampler-android/app/src/main/cpp/: AudioManager.cpp  AudioManager.h  NativeAudioManagerBridge.cpp  WavGenerator.cpp  WavGenerator.h  logging_macros.h  native-lib.cpp
sampler-android/app/src/main/java/com/mercandalli/android/apps/sampler/: MainActivity.kt
sampler-android/app/src/main/java/com/mercandalli/android/apps/sampler/audio/: AudioManager.kt  AudioModule.kt  NativeAudioManager.kt  SoundPoolAudioManager.kt
sampler-android/app/src/main/java/com/mercandalli/android/apps/sampler/main/: MainActivity.kt  MainGraph.kt
sampler-android/app/src/main/java/com/mercandalli/android/apps/sampler/pad/: SquaresView.kt
sampler-android/app/src/main/java/com/mercandalli/android/apps/sampler/sample/: SampleManager.kt  SampleManagerImpl.kt
sampler-android/app/src/main/res/layout/: activity_main.xml
sampler-android/app/src/main/res/main/layout/: activity_main.xml
sampler-android/app/src/main/res/main/values/: colors.xml
sampler-android/app/src/main/res/pad/values/: color.xml  dimens.xml
sampler-app-android/: .editorconfig  .gitignore  build.gradle  build.gradle.kts  settings.gradle.kts
sampler-app-android/app/: CMakeLists.txt  build.gradle  build.gradle.kts
sampler-app-android/app/src/androidTest/java/com/mercandalli/android/apps/sampler/: ExampleInstrumentedTest.kt
sampler-app-android/app/src/main/: AndroidManifest.xml
sampler-app-android/app/src/main/cpp/: AudioManager.cpp  AudioManager.h  WavGenerator.cpp  logging_macros.h
sampler-app-android/app/src/main/java/com/mercandalli/android/apps/sampler/audio/: AudioManager.kt  AudioModule.kt  NativeAudioManager.kt  SoundPoolAudioManager.kt
sampler-app-android/app/src/main/java/com/mercandalli/android/apps/sampler/main/: MainActivity.kt  MainGraph.kt
sampler-app-android/app/src/main/java/com/mercandalli/android/apps/sampler/pad/: SquaresView.kt
sampler-app-android/app/src/main/java/com/mercandalli/android/apps/sampler/sample/: SampleManager.kt  SampleManagerImpl.kt  SampleModule.kt
sampler-app-android/app/src/main/res/main/layout/: activity_main.xml
sampler-app-android/app/src/main/res/main/values/: colors.xml  strings.xml
sampler-app-android/app/src/main/res/pad/values/: dimens.xml
sampler-app-android/app/src/test/java/com/mercandalli/android/apps/sampler/: ExampleUnitTest.kt
sampler-app-android/buildSrc/: README.md  build.gradle.kts
sampler-app-android/buildSrc/src/main/kotlin/com/mercandalli/build_src/main/: Const.kt
sampler-app-android/gradle/wrapper/: gradle-wrapper.properties
sampler-app-ios/: .gitignore  README.md
sampler-app-ios/sampler/: AppDelegate.swift  ViewController.swift
sampler-app-ios/sampler/Assets.xcassets/assets/wav/batterie/: http:::www.universal-soundbank.com:batterie-divers
sampler-app-ios/sampler/Base.lproj/: Main.storyboard
sampler-app-ios/sampler/cpp/: AudioManagerNative.h
sampler-app-ios/sampler/swift/Audio/: AudioModule.swift
sampler-app-ios/sampler/swift/Sample/: Sample.swift
sampler-app-ios/samplerTests/: samplerTests.swift
sampler-ios/sampler/: AppDelegate.swift  AudioManager.swift  ViewController.swift
sampler-ios/sampler.xcodeproj/: project.pbxproj
sampler-ios/sampler.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
sampler-ios/sampler/Base.lproj/: Main.storyboard
sampler-ios/sampler/cpp/: AudioManagerNative.cpp
sampler-ios/sampler/objc/: AudioManagerBridge.h  AudioManagerBridge.mm  sampler-Bridging-Header.h
sampler-ios/sampler/swift/: AudioManager.swift  AudioManagerImpl.swift
sampler-ios/sampler/swift/Application/: ApplicationGraph.swift
sampler-ios/sampler/swift/Audio/: AudioManager.swift  AudioManagerAVImpl.swift
sampler-ios/samplerUITests/: samplerUITests.swift
